--- a/04_ETL/1_Data_Collection/2_웹스크래핑/2_Selenium_기초/2_Daum_국내증시_웹스래핑.ipynb
+++ b/04_ETL/1_Data_Collection/2_웹스크래핑/2_Selenium_기초/2_Daum_국내증시_웹스래핑.ipynb
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "84e2bb6d-8b50-4edd-b372-a6365878826a",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
        "2  코스피 200   426.36   3.03  +0.72"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "ac1023a4-8a2a-402f-8f9d-dd50c103d1d8",
    "metadata": {},
    "outputs": [
@@ -1561,8 +1561,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8d240778-c190-4402-b748-4952b65640b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"div.price___3rj7O\"}\n  (Session info: chrome=139.0.7258.155); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#nosuchelementexception\nStacktrace:\n\tGetHandleVerifier [0x0x44a8a3+63283]\n\tGetHandleVerifier [0x0x44a8e4+63348]\n\t(No symbol) [0x0x283e43]\n\t(No symbol) [0x0x2cc8de]\n\t(No symbol) [0x0x2ccc7b]\n\t(No symbol) [0x0x2c2121]\n\t(No symbol) [0x0x2f1464]\n\t(No symbol) [0x0x2c2044]\n\t(No symbol) [0x0x2f1694]\n\t(No symbol) [0x0x31271a]\n\t(No symbol) [0x0x2f1216]\n\t(No symbol) [0x0x2c0855]\n\t(No symbol) [0x0x2c16f4]\n\tGetHandleVerifier [0x0x6bbb43+2623955]\n\tGetHandleVerifier [0x0x6b6daa+2604090]\n\tGetHandleVerifier [0x0x47069a+218410]\n\tGetHandleVerifier [0x0x460ed8+154984]\n\tGetHandleVerifier [0x0x46742d+180925]\n\tGetHandleVerifier [0x0x4522b8+94536]\n\tGetHandleVerifier [0x0x452442+94930]\n\tGetHandleVerifier [0x0x43d5ea+9338]\n\tBaseThreadInitThunk [0x0x7716fcc9+25]\n\tRtlGetAppContainerNamedObjectPath [0x0x77c682ae+286]\n\tRtlGetAppContainerNamedObjectPath [0x0x77c6827e+238]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 24\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows:\n\u001b[0;32m     23\u001b[0m     name \u001b[38;5;241m=\u001b[39m row\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp.coin-item-symbol\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n\u001b[1;32m---> 24\u001b[0m     price \u001b[38;5;241m=\u001b[39m row\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdiv.price___3rj7O\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     25\u001b[0m     change \u001b[38;5;241m=\u001b[39m row\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspan.sc-15yy2pl-0\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     26\u001b[0m     data\u001b[38;5;241m.\u001b[39mappend([name, price, change])\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:602\u001b[0m, in \u001b[0;36mWebElement.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    576\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Find an element given a By strategy and locator.\u001b[39;00m\n\u001b[0;32m    577\u001b[0m \n\u001b[0;32m    578\u001b[0m \u001b[38;5;124;03mParameters:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    599\u001b[0m \u001b[38;5;124;03m    The first matching `WebElement` found on the page.\u001b[39;00m\n\u001b[0;32m    600\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    601\u001b[0m by, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent\u001b[38;5;241m.\u001b[39mlocator_converter\u001b[38;5;241m.\u001b[39mconvert(by, value)\n\u001b[1;32m--> 602\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_execute(Command\u001b[38;5;241m.\u001b[39mFIND_CHILD_ELEMENT, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124musing\u001b[39m\u001b[38;5;124m\"\u001b[39m: by, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m: value})[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:573\u001b[0m, in \u001b[0;36mWebElement._execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    571\u001b[0m     params \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    572\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id\n\u001b[1;32m--> 573\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent\u001b[38;5;241m.\u001b[39mexecute(command, params)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:458\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    455\u001b[0m response \u001b[38;5;241m=\u001b[39m cast(RemoteConnection, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor)\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    457\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 458\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror_handler\u001b[38;5;241m.\u001b[39mcheck_response(response)\n\u001b[0;32m    459\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    460\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:232\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    230\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    231\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 232\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"div.price___3rj7O\"}\n  (Session info: chrome=139.0.7258.155); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#nosuchelementexception\nStacktrace:\n\tGetHandleVerifier [0x0x44a8a3+63283]\n\tGetHandleVerifier [0x0x44a8e4+63348]\n\t(No symbol) [0x0x283e43]\n\t(No symbol) [0x0x2cc8de]\n\t(No symbol) [0x0x2ccc7b]\n\t(No symbol) [0x0x2c2121]\n\t(No symbol) [0x0x2f1464]\n\t(No symbol) [0x0x2c2044]\n\t(No symbol) [0x0x2f1694]\n\t(No symbol) [0x0x31271a]\n\t(No symbol) [0x0x2f1216]\n\t(No symbol) [0x0x2c0855]\n\t(No symbol) [0x0x2c16f4]\n\tGetHandleVerifier [0x0x6bbb43+2623955]\n\tGetHandleVerifier [0x0x6b6daa+2604090]\n\tGetHandleVerifier [0x0x47069a+218410]\n\tGetHandleVerifier [0x0x460ed8+154984]\n\tGetHandleVerifier [0x0x46742d+180925]\n\tGetHandleVerifier [0x0x4522b8+94536]\n\tGetHandleVerifier [0x0x452442+94930]\n\tGetHandleVerifier [0x0x43d5ea+9338]\n\tBaseThreadInitThunk [0x0x7716fcc9+25]\n\tRtlGetAppContainerNamedObjectPath [0x0x77c682ae+286]\n\tRtlGetAppContainerNamedObjectPath [0x0x77c6827e+238]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "# 크롬 드라이버 실행\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument(\"--headless\")  # 창 안 띄우고 실행\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "\n",
+    "# CoinMarketCap 접속\n",
+    "url = \"https://coinmarketcap.com/\"\n",
+    "driver.get(url)\n",
+    "time.sleep(5)  # 페이지 로딩 대기\n",
+    "\n",
+    "# 코인 정보 추출\n",
+    "rows = driver.find_elements(By.CSS_SELECTOR, \"tbody tr\")[:10]\n",
+    "\n",
+    "data = []\n",
+    "for row in rows:\n",
+    "    name = row.find_element(By.CSS_SELECTOR, \"p.coin-item-symbol\").text\n",
+    "    price = row.find_element(By.CSS_SELECTOR, \"div.price___3rj7O\").text\n",
+    "    change = row.find_element(By.CSS_SELECTOR, \"span.sc-15yy2pl-0\").text\n",
+    "    data.append([name, price, change])\n",
+    "\n",
+    "driver.quit()\n",
+    "\n",
+    "# DataFrame 변환\n",
+    "df = pd.DataFrame(data, columns=[\"코인\", \"가격\", \"24h 변동률\"])\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277496db-b3f5-4769-9f49-fa9f26b96cb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba58b169-d1fb-42b6-82a0-61b44a0717aa",
    "metadata": {},
    "outputs": [],
    "source": []
